# chat-langchain-astra

./: README.md
ai-assistant/: DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-assistant/_scripts/: NEET_video_subtitles.txt  evaluate_chains.py  evaluate_chains_agent.py  evaluate_chains_improved_chain.py  evaluate_chat_langchain.py  process_videos.ipynb
ai-assistant/backend/: chain.py  constants.py  ingest.py
ai-assistant/frontend/: .env.example  package-lock.json  package.json
ai-assistant/frontend/app/: layout.tsx
ai-assistant/frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  SourceBubble.tsx
ai-assistant/frontend/public/captions/: 100020001230.txt  100020001231.txt  1000200012310.txt  10002000123100.txt  10002000123101.txt  10002000123102.txt  10002000123103.txt  10002000123104.txt  10002000123105.txt  10002000123106.txt  10002000123107.txt  10002000123108.txt  10002000123109.txt  1000200012311.txt  10002000123110.txt  10002000123111.txt  10002000123112.txt  10002000123113.txt  10002000123114.txt  10002000123115.txt  10002000123116.txt  10002000123117.txt  10002000123118.txt  10002000123119.txt  1000200012312.txt  10002000123120.txt  10002000123121.txt  10002000123122.txt  10002000123123.txt  10002000123124.txt  10002000123125.txt  10002000123126.txt  10002000123127.txt  10002000123128.txt  10002000123129.txt  1000200012313.txt  10002000123130.txt  10002000123131.txt  10002000123132.txt  10002000123133.txt  (+342 more)
